logs/collective.edm.listing.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ExternalEditor'...
Compiling './lib/python3.5/site-packages/Products/ExternalEditor/ExternalEditor.py'...
***   File "./lib/python3.5/site-packages/Products/ExternalEditor/ExternalEditor.py", line 221
    raise 'BadRequest', 'Object does not support external editing'
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ExternalEditor/tests'...
Listing './lib/python3.5/site-packages/Products.ExternalEditor-2.0.3.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/edm'...
Listing './lib/python3.5/site-packages/collective/edm/listing'...
Listing './lib/python3.5/site-packages/collective/edm/listing/locales'...
Listing './lib/python3.5/site-packages/collective/edm/listing/locales/de'...
Listing './lib/python3.5/site-packages/collective/edm/listing/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/edm/listing/locales/fr'...
Listing './lib/python3.5/site-packages/collective/edm/listing/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/edm/listing/profiles'...
Listing './lib/python3.5/site-packages/collective/edm/listing/profiles/default'...
Listing './lib/python3.5/site-packages/collective/edm/listing/profiles/default/types'...
Listing './lib/python3.5/site-packages/collective/edm/listing/resources'...
Listing './lib/python3.5/site-packages/collective/edm/listing/skins'...
Listing './lib/python3.5/site-packages/collective/edm/listing/skins/edm_listing_images'...
Listing './lib/python3.5/site-packages/collective/edm/listing/skins/edm_listing_styles'...
Listing './lib/python3.5/site-packages/collective/edm/listing/templates'...
Listing './lib/python3.5/site-packages/collective/externaleditor'...
Listing './lib/python3.5/site-packages/collective/externaleditor/Extensions'...
Listing './lib/python3.5/site-packages/collective/externaleditor/browser'...
Listing './lib/python3.5/site-packages/collective/externaleditor/locales'...
Listing './lib/python3.5/site-packages/collective/externaleditor/locales/fr'...
Listing './lib/python3.5/site-packages/collective/externaleditor/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/externaleditor/profiles'...
Listing './lib/python3.5/site-packages/collective/externaleditor/profiles/default'...
Listing './lib/python3.5/site-packages/collective/externaleditor/profiles/uninstall'...
Listing './lib/python3.5/site-packages/collective/externaleditor/skins'...
Listing './lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor'...
Compiling './lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor/externalEditorEnabled.py'...
***   File "./lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor/externalEditorEnabled.py", line 13
    return context.restrictedTraverse('@@externalEditorEnabled').available()
                                                                           ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor/external_edit.py'...
***   File "./lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor/external_edit.py", line 10
    return context.REQUEST.RESPONSE.redirect('%s/@@external_edit' % context.absolute_url())
                                                                                          ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/collective/externaleditor/tests'...
Listing './lib/python3.5/site-packages/collective/quickupload'...
Listing './lib/python3.5/site-packages/collective/quickupload/browser'...
Listing './lib/python3.5/site-packages/collective/quickupload/browser/static'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/cs'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/de'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/es'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/eu'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/eu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/fi'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/fr'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/it'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/nl'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/no'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/no/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/pt_BR'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/sk'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/zh_CN'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/zh_TW'...
Listing './lib/python3.5/site-packages/collective/quickupload/locales/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/quickupload/portlet'...
Listing './lib/python3.5/site-packages/collective/quickupload/profiles'...
Listing './lib/python3.5/site-packages/collective/quickupload/profiles/default'...
Listing './lib/python3.5/site-packages/collective/quickupload/profiles/uninstall'...
Listing './lib/python3.5/site-packages/collective/quickupload/tests'...
Listing './lib/python3.5/site-packages/collective/quickupload/upgrades'...
Listing './lib/python3.5/site-packages/collective.edm.listing-0.13.egg-info'...
Listing './lib/python3.5/site-packages/collective.externaleditor-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/collective.quickupload-1.11.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ua_parser'...
Listing './lib/python3.5/site-packages/ua_parser-0.7.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
